# LocalPassword-cli

./: .gitignore  CHANGES_SUMMARY.md  Cargo.toml  GIT_GUIDE.md  PROGRESS.md  README.md  TASK_SUMMARY.md  run_gui.bat  run_gui.sh  run_gui_cli.bat  run_gui_cli.sh  run_gui_v2.bat  run_gui_v2.sh  test_build.sh
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: crypto.rs  database.rs  lib.rs  models.rs  password_generator.rs
docs/: cli-guide.md  gui-integration.md  logging-guide.md  non-interactive-mode.md
gui/: CLI_VERSION_README.md  ENHANCED_GUI_README.md  README.md  password_manager_gui_cli.py  password_manager_gui_v1_backup.py  password_manager_gui_v2.py  password_strength.py  settings_dialog.py  theme_manager.py  toast_manager.py  welcome_page.py
gui_new/: README.md  password_manager.py  requirements.txt
