[package]
name = "password-manager-core"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
zxcvbn.workspace = true
tempfile = "3.8"
